# pursuance

./: .env  Cargo.toml  Dockerfile  README.md  configuration.yaml  spec.yaml
.cargo/: config.toml
.github/workflows/: audit-on-push.yml  general.yml
configuration/: base.yaml
crates/pursuance/: Cargo.toml
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
web_client/: README.md  angular.json  karma.conf.js  package-lock.json  package.json
web_client/src/: index.html
web_client/src/app/: app.component.spec.ts  app.component.ts
